--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,6 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+/cira_script.mescript
+/disablekvm.mescript
+/enablekvm.mescript
