Updated to perform 1 round trip provisioning.  Currently not provisioning due to TABLE_FINGERPRINT_NOT_AVAILBLE error from AMT

--- a/rcs-config.json
+++ b/rcs-config.json
@@ -15,7 +15,7 @@
     },
     {
       "ProfileName": "config2",
-      "AMTPassword": "password",
+      "AMTPassword": "P@ssw0rd",
       "ConfigurationScript": ""
     }
   ],
@@ -28,9 +28,9 @@
     },
     {
       "Name": "domain2",
-      "DomainSuffix": "somethingelse.com",
-      "ProvisioningCert": "d2.pfx",
-      "ProvisioningCertPassword": "password"
+      "DomainSuffix": "vprodemo.com",
+      "ProvisioningCert": "vprodemo.pfx",
+      "ProvisioningCertPassword": "P@ssw0rd"
     }
   ]
 }
