RCS server updated to perform MD5 hashing server-side and ACM tested working

--- a/rcs-config.json
+++ b/rcs-config.json
@@ -11,12 +11,12 @@
     {
       "ProfileName": "default",
       "AMTPassword": "password",
-      "ConfigurationScript": ""
+      "ConfigurationScript": null
     },
     {
       "ProfileName": "config2",
       "AMTPassword": "P@ssw0rd",
-      "ConfigurationScript": ""
+      "ConfigurationScript": null
     }
   ],
   "AMTDomains": [
