--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
     "websocket": "^1.0.28",
     "ws": "^7.0.0"
   },
-  "devDependencies": {
-    "jsdoc": "^3.6.2"
-  }
+  "devDependencies": {}
 }
