--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": {
     "name": "mprimros"
   },
-  "dependencies": {
-    "node-forge": "^0.8.4",
-    "ws": "^7.0.0"
-  },
-  "devDependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "node-forge": "^0.8.5",
+    "ws": "^7.1.0"
+  }
 }
