--- a/.gitignore
+++ b/.gitignore
@@ -333,3 +333,19 @@ ASALocalRun/
 /disablekvm.mescript
 /enablekvm.mescript
 amtrcs.zip
+coverage/clover.xml
+coverage/coverage-final.json
+coverage/lcov-report/wsserver.js.html
+coverage/lcov.info
+coverage/lcov-report/amt-rcs.js.html
+coverage/lcov-report/base.css
+coverage/lcov-report/block-navigation.js
+coverage/lcov-report/certificateManager.js.html
+coverage/lcov-report/cryptoHelpers.js.html
+coverage/lcov-report/helpers.js.html
+coverage/lcov-report/index.html
+coverage/lcov-report/passwordHelpers.js.html
+coverage/lcov-report/prettify.css
+coverage/lcov-report/prettify.js
+coverage/lcov-report/sort-arrow-sprite.png
+coverage/lcov-report/sorter.js
